--- a/style.css
+++ b/style.css
@@ -3,8 +3,19 @@ body, html {
     margin: 0;
 }
 
-canvas {
+div {
     width: 100%;
     height: 100%;
+}
+
+textarea {
+    height: 25vh;
+    width: 100%;
+    margin: 0;
+}
+
+canvas {
+    width: 100%;
+    height: 75vh;
     display: block;
 }
