--- a/style.css
+++ b/style.css
@@ -10,11 +10,12 @@ div {
 }
 
 textarea {
+    font-size: larger;
     height: 25vh;
     width: 100%;
     margin: 0;
     background-color: darkblue;
-    color: yellowgreen;
+    color: yellow;
 }
 
 canvas {
